# cursor_openclaw

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  BATON_CURRENT.md  CHANGELOG.md  CLAUDE_CODE_OLLAMA_WINDOWS_RUNBOOK.md  CODE.MD  CODEOWNERS  DOCKER-실행-가이드.md  DOCKER.MD  Docker-OpenClaw-설치-가이드.md  LLAMALOMA.MD  MANIFEST.json  README.md  README_AUTODEV.md  README_클로드코드.md  SKILL.MD  cursor_openclaw_ollama_windows.md  docker-compose.yml  patch.md  patch1.md  patch3.md  plan.md  pyproject.toml  run-ollama.ps1  run-ollama.sh  vram.md  올라마세팅.md  클로드코드.md
.autodev_ssot/: AUDIT_SCHEMA.json  BATON_CURRENT.md  MANIFEST.json  POLICY.md
.cursor/: hooks.json
AUTODEV_TELEGRAM_MODEB_FULLPACK/: README.md
config/: VRAM_계산_요약.md  WORK_AUTODEV_CONFIG.json  project_profile.yaml
cursor_autodev_setting_pack.egg-info/: PKG-INFO  SOURCES.txt
docs/: ARCHITECTURE.md  CLAUDE_CODE_OLLAMA_WINDOWS_RUNBOOK.md  INDEX.md  MODE_B_OPERATION_RUNBOOK.md  NEXT_PLAN.md  OLLAMA_OPENCLAW_USAGE.md  OPENCLAW_OLLAMA_WINDOWS_SUMMARY.md  ROADMAP.md  SESSION_WORK_REPORT.md  STACK_SESSION_REPORT.md  STACK_USAGE.md  WORKLOG_2026-02-15.md  WORKLOG_2026-02-16.md
openclaw_worker/: Dockerfile  worker.py
orchestrator/: README.md  config.yaml  main.py  requirements.txt  tg_orchestrator.py
scripts/: gate_local.py  gate_local.sh  init_queue.sh  mode_b_cycle.ps1  resume_killswitch.ps1  stop_killswitch.ps1  submit_task.sh  summarize_audit.py
smoke/: edit_check.txt  path_guard.txt
stack/: NEXT_STEPS.md  README_RUN.md  RUNBOOK.md  check-grafana.cmd  diagnose-install.ps1  docker-compose.cpu.yml  (+9 more)
(+136 files in other folders)
